# Local-Chat-Server

./: .gitignore  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_user.up.sql  0002_message.up.sql
backend/src/: config.rs  main.rs
backend/src/api/: api.rs  routes.rs
backend/src/auth/: authentication.rs
backend/src/chat/: chatmessage.rs  chatserver.rs  connect_disconnect.rs  mod.rs  websocketsession.rs
backend/src/db/: database.rs  db.rs
backend/src/middleware/: jwt_middleware.rs  mod.rs  request_logger.rs
backend/src/models/: mod.rs  models.rs
config/: dbConfig.ts
frontend/: .prettierrc.json  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: config.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/auth/: login-form.tsx  logo.tsx  page-header.tsx  page-layout.tsx  side-panel.tsx  (+1 more)
frontend/src/types/: chat.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/chat/: page.tsx
src/app/test/: page.tsx
src/components/auth/: auth-layout-side-panel.tsx  login-form.tsx  signup-form.tsx
src/components/chat/: chat-header.tsx  chat-input.tsx  chat-message-list.tsx  chat-message.tsx
src/db/: index.ts  message_query.ts  schema.ts  user_query.ts
src/lib/: utils.ts
src/server/: index.ts  socketio.ts
src/types/: chat.ts
src/validations/: login-schema.ts  signup-schema.ts
(+26 files in other folders)
