[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
anyhow = "1.0.98"
bcrypt = "0.17.0"
validator = {version = "0.20.0", features = ["derive"]}
actix = "0.13.5"
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-web-actors = "4.3.1+deprecated"
actix-web-lab = "0.24.1"
actix-web-nextjs = "0.2.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "derive", "uuid", "chrono"] }
chrono = {version = "0.4.41", features = ["serde"]}
uuid = {version = "1.17.0", features = ["serde", "v4"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
